--- a/TinPlant/index.html
+++ b/TinPlant/index.html
@@ -13,7 +13,7 @@
 
   <!-- bootstrap css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- font awesome link -->
   <script src="https://kit.fontawesome.com/cbc2426fb8.js" crossorigin="anonymous"></script>
